pkg/i2gw/providers/openapi3/fixtures/output/2-hostnames.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-1
spec:
  gatewayClassName: external
  listeners:
  - name: http
    hostname: "*"
    port: 80
    protocol: HTTP
  - name: api-example-com-http
    hostname: api.example.com
    port: 80
    protocol: HTTP
  - name: api-example-com-https
    hostname: api.example.com
    port: 443
    protocol: HTTPS
    tls: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: route-1-1
spec:
  parentRefs:
  - name: gateway-1
    sectionName: http
  rules:
  - matches:
    - method: POST
      path:
        type: Exact
        value: /api/v1/resource
    - method: DELETE
      path:
        type: Exact
        value: /api/v1/resource/{id}
    - method: GET
      path:
        type: Exact
        value: /api/v1/resource/{id}
    - method: PATCH
      path:
        type: Exact
        value: /api/v1/resource/{id}
    backendRefs:
    - name: backend-1
status:
  parents: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: route-2-1
spec:
  parentRefs:
  - name: gateway-1
    sectionName: api-example-com-http
  hostnames:
  - api.example.com
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /v1/status
    - method: GET
      path:
        type: Exact
        value: /v2/status
    - method: GET
      path:
        type: Exact
        value: /v3/status
    backendRefs:
    - name: backend-1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: route-3-1
spec:
  hostnames:
  - api.example.com
  parentRefs:
  - name: gateway-1
  rules:
  - matches:
    - method: POST
      path:
        type: Exact
        value: /v2/resource
    - method: DELETE
      path:
        type: Exact
        value: /v2/resource/{id}
    - method: GET
      path:
        type: Exact
        value: /v2/resource/{id}
    - method: PATCH
      path:
        type: Exact
        value: /v2/resource/{id}
    - method: POST
      path:
        type: Exact
        value: /v3/resource
    - method: DELETE
      path:
        type: Exact
        value: /v3/resource/{id}
    - method: GET
      path:
        type: Exact
        value: /v3/resource/{id}
    - method: PATCH
      path:
        type: Exact
        value: /v3/resource/{id}
    backendRefs:
    - name: backend-1
status:
  parents: null
