pkg/i2gw/providers/openapi3/fixtures/output/3-parameters.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-1
spec:
  gatewayClassName: external
  listeners:
  - name: http
    hostname: "*"
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: route-1-1
spec:
  parentRefs:
  - name: gateway-1
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /resource/{id}
    - method: GET
      path:
        type: Exact
        value: /resources
      queryParams:
      - name: q
        type: Exact
    - method: POST
      path:
        type: Exact
        value: /resources
      headers:
      - name: digest
        type: Exact
    backendRefs:
    - name: backend-1
status:
  parents: null
